# IvorySquareSolutions

./: .gitignore  CLAUDE.md  LICENSE  README.md  c2_ready_summary_workstream_A.md  c2_ready_summary_workstream_B.md  deep_research_report.md  discussions.txt  goal_driven.txt  mvp_build_goal.md  openai_bioproject.txt  requirements.txt  success_criteria.md
mvp/: .env.example  .gitignore  BUILD_LOG.md  BUILD_REFS.md  BUILD_STATE.json  README.md  SPEC_UPDATES.md  __init__.py  pyproject.toml
mvp/agents/: README.md  __init__.py  accounting_expert.py  citation_auditor.py  evaluation_agent.py  persona_runtime.py  quant_finance_methodologist.py
mvp/agents/audit_log/: README.md
mvp/api/: __init__.py  error_envelope.py  routes.py  server.py
mvp/cli/: __init__.py  main.py
mvp/curriculum/: __init__.py  graph.py  graph.yaml  llm_baseline.py  materialize.py  prereqs.py  toc_ingest.py
mvp/curriculum/tocs/: bertsimas_lp.yaml  boyd_cvx.yaml  cfa_l1_corp.yaml  (+5 more)
mvp/data/: manifest.jsonl
mvp/engine/: __init__.py  citation_validator.py  rule_executor.py
mvp/eval/: __init__.py  citation_check.py  gold_loader.py  runner.py
mvp/human_layer/: README.md  audit_review_guide.md  gold_authoring_guide.md  rule_authoring_guide.md
mvp/ingestion/: __init__.py  filings_ingest.py  market_data_loader.py  papers_ingest.py
mvp/lib/: __init__.py  citation.py  cost_tracking.py  edgar.py  errors.py  hashing.py  llm.py  pdf_io.py  periods.py
mvp/rules/: README.md  ontology.yaml
mvp/scripts/: __init__.py  _author_manual_extractions.py  phase0_demo.py  phase1_demo.py  phase2_demo.py  phase4_demo.py  phase5_demo.py  phase6_demo.py
mvp/skills/: __init__.py  _base.py  manifest_schema.py  registry.py
mvp/standardize/: __init__.py  mappings.py  restatements.py  statements.py
mvp/store/: __init__.py  doc_store.py  facts_store.py  schema.py
mvp/tests/: conftest.py  test_fnd_accounting_cpa_far_ch02_03_depreciation_methods.py
(+474 files in other folders)
